[gd_scene load_steps=4 format=3 uid="uid://vjd6bs6p888b"]

[ext_resource type="Script" path="res://src/scenes/meta1.gd" id="1_cjky3"]
[ext_resource type="Texture2D" uid="uid://c8u2cxaxsx8am" path="res://assets/meta1.png" id="1_x1b4a"]
[ext_resource type="VideoStream" path="res://assets/meta-video1.ogv" id="3_b6bst"]

[node name="meta1" type="Node2D"]
script = ExtResource("1_cjky3")

[node name="Meta1" type="Sprite2D" parent="."]
position = Vector2(386, 215)
texture = ExtResource("1_x1b4a")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
offset_left = -571.0
offset_top = -264.0
offset_right = 1349.0
offset_bottom = 824.0
stream = ExtResource("3_b6bst")

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
